# fly_server

./: .dockerignore  .gitignore  API.md  CMakeLists.txt  Dockerfile  README.md  api.md  docker-compose.yml  init.sql  main  main.cpp  mysqld.cnf  push-docker.sh  send_email.py  start.sh  test
api/: flightapi.h  orderapi.h  sendapi.h  userapi.h
mapper/: MapperException.hpp  README.md  entity.hpp
mapper/aop/: Aspect.hpp  Exception.hpp
mapper/builder/: SQLBuilder.hpp  SQLStatement.hpp
mapper/common/: BaseMapper.hpp  ExampleMapper.hpp  Mapper.hpp  RowBoundsMapper.hpp
mapper/entity/: CollectionInfo.hpp  Criteria.hpp  Criterion.hpp  EntityColumn.hpp  EntityEnum.hpp  EntityTable.hpp  EntityTableMap.hpp  EntityWrapper.hpp  Example.hpp  Iterable.hpp  JoinEntityTable.hpp  Object.hpp  OrderBy.hpp  RowBounds.hpp  SQLConstants.hpp  User.hpp
mapper/guard/: ConnectionGuard.hpp
mapper/sql/: Connection.hpp  ConnectionPool.hpp  DatabaseOption.hpp  PrepareBinder.hpp  ResultBinder.hpp  SQLException.hpp
mapper/util/: AliasHelper.hpp  CommonUtils.hpp  EntityHelper.hpp  ExampleHelper.hpp  QueryHelper.hpp  Singleton.hpp  StringUtils.hpp  TimeUtils.hpp  TypeUtils.hpp
utility/: jwt.cpp  jwt.h  redisclient.cpp  redisclient.h
